<?xml version="1.0"?>
<package>
  <name>irg_cmake</name>
  <version>1.0.0</version>
  <description>CMake Macros for the SORA Core</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mark.b.allan@nasa.gov">Mark Allan</maintainer>


  <!-- These are build-system macros copied from the internet. -->
  <!-- We just collect them here for our system to easily find them -->
  <license>Apache2</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
