<?xml version="1.0"?>
<package>
  <name>irg_cmake</name>
  <version>1.0.0</version>
  <description>CMake Scripts used by the Intelligen Robotics Group at NASA Ames Research Center</description>
  <maintainer email="mark.b.allan@nasa.gov">Mark Allan</maintainer>
  <license>Apache2</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
