<?xml version="1.0"?>
<package format="3">
  
  <name>irg_cmake</name>
  <version>1.0.0</version>
  <description>CMake scripts used by the Intelligen Robotics Group at NASA Ames Research Center</description>
  <maintainer email="mark.b.allan@nasa.gov">Mark Allan</maintainer>
  <license>Apache2</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
